--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,11 @@
-<div id="comment-form">
-  <%= form_with model: comment, url: post_comments_path(post) do |f| %>
+<div id="comment-form" class="w-full">
+  <%= form_with model: comment, url: post_comments_path(post), html: { class: "w-full" } do |f| %>
     <%= render "shared/object_error_messages", object: @comment %>
-    <div class="flex items-center">
-      <%= f.text_area :body, class: "w-full bg-stone-50 p-2 border border-yellow-950 rounded-md", placeholder: "コメント" %>
-      <%= f.submit "投稿", class: "ml-2 w-20 p-4  bg-yellow-900 text-white hover:bg-yellow-700 rounded-md cursor-pointer" %>
+
+    <%= f.text_area :body, class:"w-full min-w-0 bg-stone-50 p-2 border border-yellow-950 rounded-md", placeholder: "コメント" %>
+    <div class="flex justify-end">
+      <%= f.submit "投稿", class: "mt-2 w-20 p-3 bg-yellow-900 text-white hover:bg-yellow-700 rounded-md cursor-pointer" %>
     </div>
+
   <% end %>
 </div>
