--- a/app/views/comments/_comments_area.html.erb
+++ b/app/views/comments/_comments_area.html.erb
@@ -1,14 +1,9 @@
-<div class="w-[90%] md:max-w-screen-lg container mx-auto my-8 px-15 py-6 bg-white shadow-sm shadow-2xs rounded-xl">
+<div class="w-[90%] md:max-w-screen-lg container mx-auto my-8 px-6 md:px-15 py-6 bg-white shadow-sm rounded-xl">
   <div class="text-lg mb-2">コメント（<%= @post.comments.count %>件）</div>
-
-  <div id="error"></div>
 
   <%= render "comments/form", comment: @comment, post: @post %>
 
-  <% if @comments.present? %>
-    <div class="my-3 border-b border-yellow-950 w-full "></div>
-  <% end %>
-  <div id="comments_area" class="mb-3">
+  <div id="comments-area" class="mb-3">
     <%= render @comments %>
   </div>
 </div>
