--- a/app/views/comments/create.turbo_stream.erb
+++ b/app/views/comments/create.turbo_stream.erb
@@ -3,10 +3,13 @@
     <%= render 'comments/form', comment: @comment, post: @comment.post %>
   <% end %>
 <% else %>
-  <%= turbo_stream.prepend "comments_area" do %>
+  <%= turbo_stream.prepend "comments-area" do %>
     <%= render 'comments/comment', comment: @comment %>
   <% end %>
   <%= turbo_stream.replace "comment-form" do %>
     <%= render 'comments/form', comment: Comment.new, post: @comment.post %>
+  <% end %>
+  <%= turbo_stream.replace "comments-border" do %>
+    <div class="my-3 border-b border-yellow-950 w-full "></div>
   <% end %>
 <% end %>
