ポスト一覧レイアウト修正

--- a/app/views/posts/likes.html.erb
+++ b/app/views/posts/likes.html.erb
@@ -7,7 +7,7 @@
 <%= render 'search_form', q: @q, url: likes_posts_path %>
 
 <% if @like_posts.present? %>
-  <div class="my-8 max-w-screen-xl mx-auto">
+  <div class="my-8 max-w-275 mx-auto">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 justify-items-center">
       <%= render @like_posts %>
     </div>
