--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -17,15 +17,13 @@
     <div class="flex justify-self-start text-yellow-600">
       <%= post.created_at.strftime('%Y/%m/%d') %>
     </div>
-    <% if local_assigns[:show_actions] != false %>
-      <% if current_user %>
-        <% if current_user.own?(post) %>
-          <div class="flex gap-1">
-            <%= render "posts/edit_and_destroy_buttons", { post: post } %>
-          </div>
-        <% else %>
-          <%= render "like_buttons", { post: post } %>
-        <% end %>
+    <% if local_assigns[:show_actions] != false && current_user %>
+      <% if current_user.own?(post) %>
+        <div class="flex gap-1">
+          <%= render "posts/edit_and_destroy_buttons", { post: post } %>
+        </div>
+      <% else %>
+        <%= render "like_buttons", { post: post } %>
       <% end %>
     <% end %>
   </div>
