--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -13,7 +13,7 @@
     <div data-controller="autocomplete" data-autocomplete-url-value="/tags/autocomplete" role="combobox" data-autocomplete-query-param-value="name">
       <%= f.search_field :tags_name_eq, data: { autocomplete_target: "input" }, placeholder: " タグ", class: "mt-2 lg:mt-0 p-2 w-74 lg:w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
       <%= f.hidden_field :tags_name, data: { autocomplete_target: "hidden" } %>
-      <ul class="list-group z-50 absolute w-74 lg:w-50 max-h-60 overflow-y-auto" data-autocomplete-target="results"></ul>
+      <ul class="list-group z-50 absolute w-74 lg:w-50 max-h-60 overflow-y-auto border border-gray-200 rounded-md" data-autocomplete-target="results"></ul>
     </div>
 
     <%= f.search_field :title_or_body_or_tags_name_cont, placeholder: " キーワード", class: "mt-2 lg:mt-0 p-2 w-74 lg:w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
