--- a/app/views/tags/autocomplete.html.erb
+++ b/app/views/tags/autocomplete.html.erb
@@ -1,5 +1,5 @@
 <% @tags.each do |tag| %>
-  <li data-autocomplete-target="resultItem" class="py-2 px-3 text-sm text-gray-800 bg-stone-50 hover:bg-yellow-200 cursor-pointer border border-gray-200 rounded-md" role="option" data-autocomplete-value="<%= tag.id %>" data-autocomplete-label="<%= tag.name %>">
+  <li data-autocomplete-target="resultItem" class="py-2 px-3 text-sm text-gray-800 bg-stone-50 hover:bg-yellow-200 cursor-pointer" role="option" data-autocomplete-value="<%= tag.id %>" data-autocomplete-label="<%= tag.name %>">
     <%= tag.name %>
   </li>
 <% end %>
