--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
     </div>
 
     <div class="w-50 h-50 p-8 text-center bg-white border-2 border-yellow-900 shadow-2xs rounded-lg">
-      <%= link_to "#" do %>
+      <%= link_to user_authentication_path do %>
         <div class= "flex flex-wrap justify-center">
           <%= image_tag "mypage_settings_icon.png" %>
           <div class="p-2 text-base text-center font-bold text-yellow-900">
