add:トークン期限追加

--- a/app/views/user_mailer/send_change_email.html.erb
+++ b/app/views/user_mailer/send_change_email.html.erb
@@ -7,7 +7,7 @@
   <%= link_to "個人情報を変更する", @url %>
 </p>
 
-<p>このリンクは一定時間後に無効になりますので、お早めにご確認ください。</p>
+<p>このリンクの有効期限は30分です。お早めにご確認ください。</p>
 
-SweetsLog
-https://sweetslog.fly.dev/
+<p>SweetsLog</p>
+<p>https://sweetslog.fly.dev/</p>
