--- a/app/views/users/my_posts.html.erb
+++ b/app/views/users/my_posts.html.erb
@@ -35,5 +35,5 @@
     </nav>
   </div>
 <% else %>
-  <div class="my-45 text-center">掲示板がありません</div>
+  <div class="my-20 md:my-44 text-center">掲示板がありません</div>
 <% end %>
