--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,13 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.name %> 様</p><br><br>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>以下のリンクからパスワードにの再設定が可能です。</p>
+<p>
+  <%= link_to "パスワードを再設定する", edit_password_url(@resource, reset_password_token: @token) %>
+</p><br><br>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+
+<p>※この内容に心当たりが無い場合は、メールを無視してください。</p><br>
+
+<p>SweetsLog</p>
+<p>https://sweetslog.fly.dev/</p>
