--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
   <div class="justify-items-center">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
-      <%= f.hidden_field :reset_password_token %>
+      <%= f.hidden_field :edit_profile_token %>
 
       <div class="mb-6">
         <%= f.label :current_password, class: "block text-yellow-950 font-bold" %>
