--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,16 @@
 
     <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", "data-turbo-track": "reload", defer: true %>
     <%= display_meta_tags(default_meta_tags) %>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMGNVTNH06"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HMGNVTNH06');
+    </script>
   </head>
 
   <body class="min-h-screen">
