--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
+    <%= javascript_include_tag "https://code.jquery.com/jquery-3.6.0.min.js", defer: true %>
+
     <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css", media: "all", "data-turbo-track": "reload" %>
-        <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css", media: "all", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css", media: "all", "data-turbo-track": "reload" %>
 
     <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", "data-turbo-track": "reload", defer: true %>
     <%= display_meta_tags(default_meta_tags) %>
