--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,11 +1,18 @@
 <%= render 'shared/flash_messages' %>
-<div class="flex flex-col items-center justify-center my-50 mx-10">
+<div class="flex flex-col items-center justify-center m-10">
   <%= image_tag "SweetsLog_logo.png" %>
   <ul class= "text-center text-xs sm:text-base text-yellow-900">
     <li>美味しい<span class="font-bold text-base sm:text-lg">「スイーツ」</span>を食べた</li>
     <li>幸せな思い出<span class="font-bold text-base sm:text-lg">「ログ」</span>しよう</li>
   </ul>
 </div>
+  <div class="slider my-10">
+    <% @posts.each do |post| %>
+      <% if post.image.attached? %>
+        <div><%= image_tag(post.image.variant(resize_to_fill: [320, 320]), class:"rounded-xl") %></div>
+      <% end %>
+    <% end %>
+  </div>
 
 <div class="flex flex-col items-center justify-center animate-bounce">
   <span class="mt-5 text-yellow-900">Scroll</span>
@@ -16,80 +23,72 @@
 </div>
 
 <div class="box fadeIn">
-  <div class="slider my-20">
-    <% @posts.each do |post| %>
-      <% if post.image.attached? %>
-        <div><%= image_tag(post.image.variant(resize_to_fill: [320, 320]), class:"rounded-xl") %></div>
-      <% end %>
-    <% end %>
-  </div>
-
-  <div class="m-20 text-center text-base text-yellow-900">
+  <div class="m-10 text-center text-base text-yellow-900">
     <ul>
       <li><span class="text-lg font-bold">SweetsLog</span> は</li>
       <li>美味しいスイーツを食べた幸せな記憶を記録し、</li>
       <li>シェアできるアプリです。</li>
     </ul>
   </div>
-</div>
 
-<div class="box fadeIn mx-auto max-w-[90%]">
-  <div class="mb-12 justify-items-center grid grid-cols-1 gap-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
-    <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
-      <div class= "flex flex-wrap justify-center">
-        <%= image_tag "top_posts_icon.png" %>
-        <div class="pt-4 text-center text-yellow-900">
-          <ul>
-            <li>美味しいスイーツを食べた</li>
-            <li>幸せな気持ちを写真や</li>
-            <li>店舗名と共に投稿。</li>
-          </ul>
+  <div class="mx-auto max-w-[90%]">
+    <div class="mb-12 justify-items-center grid grid-cols-1 gap-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+      <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
+        <div class= "flex flex-wrap justify-center">
+          <%= image_tag "top_posts_icon.png" %>
+          <div class="pt-4 text-center text-yellow-900">
+            <ul>
+              <li>美味しいスイーツを食べた</li>
+              <li>幸せな気持ちを写真や</li>
+              <li>店舗名と共に投稿。</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
+        <div class= "flex flex-wrap justify-center">
+          <%= image_tag "top_likes_icon.png" %>
+          <div class="pt-4 text-center text-yellow-900">
+            <ul>
+              <li>みんなの投稿を見て、</li>
+              <li>食べてみたいスイーツを</li>
+              <li>お気に入り登録。</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
+        <div class= "flex flex-wrap justify-center">
+          <%= image_tag "top_search_icon.png" %>
+          <div class="text-center text-yellow-900 mt-4">
+            <ul>
+              <li>都道府県・メニュー名・</li>
+              <li>キーワード等の項目で</li>
+              <li>投稿を検索できます。</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
+        <div class= "flex flex-wrap justify-center">
+          <%= image_tag "top_diagnoses_icon.png" %>
+          <div class="pt-4 text-center text-yellow-900">
+            <ul>
+              <li>何を食べるか迷ったときは、</li>
+              <li>スイーツ診断。</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-
-    <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
-      <div class= "flex flex-wrap justify-center">
-        <%= image_tag "top_likes_icon.png" %>
-        <div class="pt-4 text-center text-yellow-900">
-          <ul>
-            <li>みんなの投稿を見て、</li>
-            <li>食べてみたいスイーツを</li>
-            <li>お気に入り登録。</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
-      <div class= "flex flex-wrap justify-center">
-        <%= image_tag "top_search_icon.png" %>
-        <div class="text-center text-yellow-900 mt-4">
-          <ul>
-            <li>都道府県・メニュー名・</li>
-            <li>キーワード等の項目で</li>
-            <li>投稿を検索できます。</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
-      <div class= "flex flex-wrap justify-center">
-        <%= image_tag "top_diagnoses_icon.png" %>
-        <div class="pt-4 text-center text-yellow-900">
-          <ul>
-            <li>何を食べるか迷ったときは、</li>
-            <li>スイーツ診断。</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="w-[90%] text-white md:w-90 mx-auto mb-12 text-center text-base">
-    <%= link_to 'みんなの投稿を見る', posts_path, class: "block px-5 py-2.5 bg-yellow-900 rounded-xl hover:bg-yellow-700" %>
-    <% unless user_signed_in? %>
-      <%= link_to '会員登録（無料）をして使ってみる', new_user_registration_path, class: "mt-4 block px-5 py-2.5 bg-yellow-900 rounded-xl hover:bg-yellow-700" %>
-    <% end %>
+    <div class="w-[90%] text-white md:w-90 mx-auto mb-12 text-center text-base">
+      <%= link_to 'みんなの投稿を見る', posts_path, class: "block px-5 py-2.5 bg-yellow-900 rounded-xl hover:bg-yellow-700" %>
+      <% unless user_signed_in? %>
+        <%= link_to '会員登録（無料）をして使ってみる', new_user_registration_path, class: "mt-4 block px-5 py-2.5 bg-yellow-900 rounded-xl hover:bg-yellow-700" %>
+      <% end %>
+   </div>
   </div>
 </div>
