--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -23,7 +23,7 @@
 </div>
 
 <div class="box fadeIn">
-  <div class="m-10 text-center text-base text-yellow-900">
+  <div class="m-10 text-center text-xs sm:text-base text-yellow-900">
     <ul>
       <li><span class="text-lg font-bold">SweetsLog</span> は</li>
       <li>美味しいスイーツを食べた幸せな記憶を記録し、</li>
