--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="w-[90%] md:w-150 my-6 container mx-auto px-2 pt-10 pb-6 bg-white shadow-sm shadow-2xs rounded-xl">
+<div class="w-[90%] md:w-150 my-8 container mx-auto px-2 pt-10 pb-6 bg-white shadow-sm shadow-2xs rounded-xl">
   <div class= "mt-4 mb-6 font-bold text-center text-2xl text-yellow-900">
     ユーザー登録
   </div>
@@ -16,12 +16,20 @@
 
       <div class="flex flex-col mt-6">
         <%= f.label :password, class: "text-yellow-950 font-bold" %>
-        <%= f.password_field :password, class: "w-65 md:w-96 p-1.5 bg-stone-50 border border-stone-950 rounded-md", placeholder:"パスワード（6文字以上）" %>
+        <%= f.password_field :password, id: "password", class: "w-65 md:w-96 p-1.5 bg-stone-50 border border-stone-950 rounded-md", placeholder:"パスワード（6文字以上）" %>
+      </div>
+      <div class="mt-1">
+        <input type="checkbox" class="form-check-input" id="toggle-password">
+        <label for="toggle-password">パスワードを表示</label>
       </div>
 
       <div class="flex flex-col mt-6">
         <%= f.label :password_confirmation, class: "text-yellow-950 font-bold" %>
-        <%= f.password_field :password_confirmation, class: "w-65 md:w-96 p-1.5 bg-stone-50 border border-stone-950 rounded-md", placeholder:"もう一度入力してください" %>
+        <%= f.password_field :password_confirmation, id: "password_confirmation", class: "w-65 md:w-96 p-1.5 bg-stone-50 border border-stone-950 rounded-md", placeholder:"もう一度入力してください" %>
+      </div>
+      <div class="mt-1">
+        <input type="checkbox" class="form-check-input" id="toggle-password_confirmation">
+        <label for="toggle-password">パスワードを表示</label>
       </div>
 
       <div class="mt-6 actions flex justify-center">
