--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -41,26 +41,30 @@
       </div>
     </div>
 
-    <div class="mt-12 mb-6 w-full col-span-2 flex items-center justify-center">
-      <div class="border-b border-yellow-950 w-[95%] "></div>
-    </div>
-
-    <div class="col-span-2">
+    <div class="col-span-2 w-[95%] container my-8 px-4 py-4 bg-yellow-50 inset-shadow-xs shadow-sm rounded-xl">
       <div class="flex flex-col justify-center items-center">
-        <div class="sm:text-base font-bold text-yellow-950">
+        <div class="pt-0 sm:pt-2 sm:text-base font-bold text-yellow-950">
           <%= @post.spot %>
         </div>
-        <div class="flex">
+        <div class="inline-flex">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-1 size-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 21v-7.5a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349M3.75 21V9.349m0 0a3.001 3.001 0 0 0 3.75-.615A2.993 2.993 0 0 0 9.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 0 0 2.25 1.016c.896 0 1.7-.393 2.25-1.015a3.001 3.001 0 0 0 3.75.614m-16.5 0a3.004 3.004 0 0 1-.621-4.72l1.189-1.19A1.5 1.5 0 0 1 5.378 3h13.243a1.5 1.5 0 0 1 1.06.44l1.19 1.189a3 3 0 0 1-.621 4.72M6.75 18h3.75a.75.75 0 0 0 .75-.75V13.5a.75.75 0 0 0-.75-.75H6.75a.75.75 0 0 0-.75.75v3.75c0 .414.336.75.75.75Z" />
-          </svg><span class="mt-1"><%= @post.address %></span>
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+          </svg>
+          <span class="my-1 text-xs sm:text-sm"><%= @post.address %></span>
         </div>
       </div>
+      <div class="p-0 sm:p-4 w-full">
+        <div id="map" class="h-80 md:h-100 rounded-xl"></div>
+      </div>
     </div>
+  </div>
 
-    <div class="p-4 col-span-2 w-[95%]">
-      <div id="map" class="h-80 md:h-100 rounded-xl"></div>
-    </div>
+  <div class="flex justify-center items-center">
+    <%= link_to "https://x.com/share?url=#{post_url(@post)}&text=#{CGI.escape("#{ @post.user.name}さんの投稿【#{ @post.title}】をチェック！")}", class:"inline-flex text-yellow-950 hover:text-yellow-700", target: "_blank", rel: "noopener noreferrer" do %>
+      <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="size-4.5"><title>X</title><path d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/></svg>
+      <span>で投稿をシェアする</span>
+    <% end %>
   </div>
 </div>
 
