マージン調整

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="col-span-2 w-full sm:w-[95%] container my-8 px-4 py-4 bg-yellow-50 inset-shadow-xs shadow-sm rounded-xl">
+    <div class="col-span-2 w-full sm:w-[95%] container mt-0 sm:mt-8 mb-6 px-4 py-4 bg-yellow-50 inset-shadow-xs shadow-sm rounded-xl">
       <div class="flex flex-col justify-center items-center">
         <div class="pt-0 sm:pt-2 sm:text-base font-bold text-yellow-950">
           <%= @post.spot %>
