add:googleログイン機能

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,5 +37,12 @@
       </div>
     <% end %>
   </div>
+
+  <div class="mx-auto flex items-center my-4 w-[90%]">
+    <div class="flex-grow border-t border-yellow-900"></div>
+    <span class="mx-4 text-yellow-900">または</span>
+    <div class="flex-grow border-t border-yellow-900"></div>
+  </div>
+
   <%= render "devise/shared/links" %>
 </div>
