add:googleログイン中の個人情報変更ページアクセス制限

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -19,7 +19,7 @@
 
 <% if @user == current_user %>
   <div class="mb-50 flex justify-center">
-    <%= link_to "編集する", edit_user_path(current_user), class: "w-40 rounded-md bg-yellow-900 p-3 text-center text-white focus:outline-none cursor-pointer" %>
+    <%= link_to "プロフィールを編集する", edit_user_path(current_user), class: "w-50 rounded-md bg-yellow-900 p-3 text-center text-white focus:outline-none cursor-pointer" %>
   </div>
 <% else %>
   <div class="mb-18">
