--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/flash_messages' %>
+<%= render "shared/flash_messages" %>
 <div class="flex flex-col items-center justify-center m-10">
   <%= image_tag "SweetsLog_logo.png" %>
   <ul class= "text-center text-xs sm:text-base text-yellow-900">
