--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,26 @@
 <%= render "shared/flash_messages" %>
 
 <div class="my-8">
-  <%= render 'search_form', q: @q, url: posts_path %>
+  <%= render "search_form", q: @q, url: posts_path %>
 </div>
 
-<% if params[:q].blank? && (params[:page].blank? || params[:page] == "1") %>
+<% if params[:q].blank? && params[:tag_name].blank? && (params[:page].blank? || params[:page] == "1") %>
   <% if @recommend_posts.present? %>
-    <div class="w-[90%] md:max-w-290 container mx-auto p-6 my-6 bg-yellow-100 shadow-sm rounded-xl">
-      <div class="max-w-275 mx-auto">
-        <div class="mb-4 text-center text-lg font-semibold text-yellow-900">あなたへのおすすめ投稿</div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5 justify-items-center">
-          <%= render @recommend_posts, show_actions: false %>
-        </div>
+  <div class="mx-auto w-[75%]">
+    <div class="mb-4 flex items-center justify-center">
+      <div class="flex-grow border-t border-yellow-700"></div>
+        <span class="mx-4 text-yellow-900 font-bold text-sm md:text-lg tracking-wide">
+          あなたへのおすすめ
+        </span>
+      <div class="flex-grow border-t border-yellow-700"></div>
+    </div>
+        
+    <div class="max-w-275 mx-auto">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5 justify-items-center">
+        <%= render @recommend_posts, show_actions: false %>
       </div>
+    </div>
+    <div class="mt-6 border-b border-yellow-700"></div>
     </div>
   <% end %>
 <% end %>
