--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,13 +6,14 @@
 
 <% if params[:q].blank? && params[:tag_name].blank? && (params[:page].blank? || params[:page] == "1") %>
   <% if @recommend_posts.present? %>
-  <div class="mx-auto w-[75%]">
-    <div class="mb-4 flex items-center justify-center">
-      <div class="flex-grow border-t border-yellow-700"></div>
-        <span class="mx-4 text-yellow-900 font-bold text-sm md:text-lg tracking-wide">
-          あなたへのおすすめ
-        </span>
-      <div class="flex-grow border-t border-yellow-700"></div>
+    <div class="mx-auto w-[90%] lg:w-[80%]">
+      <div class="mb-4 flex items-center justify-center">
+        <div class="flex-grow border-t border-yellow-700"></div>
+          <span class="mx-4 text-yellow-900 font-bold text-sm md:text-lg tracking-wide">
+            あなたへのおすすめ
+          </span>
+        <div class="flex-grow border-t border-yellow-700"></div>
+      </div>
     </div>
         
     <div class="max-w-275 mx-auto">
@@ -20,7 +21,8 @@
         <%= render @recommend_posts, show_actions: false %>
       </div>
     </div>
-    <div class="mt-8 border-b border-yellow-700"></div>
+    <div class="mx-auto w-[90%] lg:w-[80%]">
+      <div class="mt-8 border-b border-yellow-700"></div>
     </div>
   <% end %>
 <% end %>
