--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -37,5 +37,5 @@
     </nav>
   </div>
 <% else %>
-  <div class="my-10 text-center">掲示板がありません</div>
+  <div class="my-10 text-center">投稿がありません</div>
 <% end %>
