--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -8,7 +8,7 @@
       </div>
     <% end %>
     <%= f.select :address_cont, Prefecture.list, { include_blank: " 都道府県" }, class: "p-2 mt-2 lg:mt-0 w-74 lg:w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
-    <%= f.search_field :title_cont, placeholder: " メニュー名", class: "mt-2 lg:mt-0 p-2 w-74 lg:w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.select :categories_id_in, Category.all.pluck(:name, :id), { include_blank: "カテゴリ" }, class: "p-2 mt-2 lg:mt-0 w-74 lg:w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
 
     <div data-controller="autocomplete" data-autocomplete-url-value="/tags/autocomplete" role="combobox" data-autocomplete-query-param-value="name">
       <%= f.search_field :tags_name_cont, data: { autocomplete_target: "input" }, placeholder: " タグ", class: "mt-2 lg:mt-0 p-2 w-74 lg:w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
