--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,9 +17,9 @@
           <%= f.file_field :image, accept: ".jpeg, .gif, .png, .jpg", class: "w-65 sm:w-100 py-2 px-2 appearance-none bg-stone-50 border border-yellow-950 rounded text-gray-500 cursor-pointer" %>
         </div>
 
-        <div class="w-full">
+        <div class="w-full mb-5 lg:mb-0">
           <%= f.label :category_ids, "カテゴリー", class: "text-yellow-950 font-bold" %>
-          <div class="grid grid-cols-2 gap-x-4 ml-2">
+          <div class="grid grid-cols-1 md:grid-cols-2 ml-2">
             <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
               <div class="form-check flex items-center">
                 <%= b.check_box(class: "form-check-input mr-2") %>
